<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="wrap_content"
                android:padding="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/txt_titulo"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/combustivel" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editGasolina"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/txt_hint_edit_gasolina"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editEtanol"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/txt_hint_edit_etanol"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textColorHint="@android:color/darker_gray" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="28dp"
                android:text="@string/txt_button_calcular"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/txt_resultado"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="28dp"
                android:textSize="18sp"
                android:background="#3F51B5"
                android:text="@string/txt_button_salvar"
              />

            <Button
                android:id="@+id/btnlimpar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="26dp"
                android:textSize="18sp"
                android:background="#3F51B5"
                android:text="@string/txt_button_limpar"/>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="26dp"
                android:text="@string/txt_button_finalizar"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
